# elena-project-assistant

./: .dockerignore  .env.example  .gcloudignore  .gitignore  .railwayignore  Dockerfile  README.md  cloudbuild.yaml  docker-compose.yml  nixpacks.toml  railway.toml
backend/: .gitignore  VECTOR_STORE_SETUP.md  app.py  app_v2.py  delete_index.py  enhanced_agent.py  firestore_db.py  knowledge_manager.py  pyproject.toml  requirements.txt  test_reasoning.py  test_search.py  vector_store.py  vector_store_factory.py  vector_store_pinecone.py  vector_store_qdrant.py  vector_store_vertex.py  voice_handler.py
backend/documents/Aurora (Safeway) Regina, SK/: Aurora Food Store IFC Drawings (March 25, 2025).AI.md  Aurora Food Store IFC Drawings (March 25, 2025).md  FIELD_VERIFICATION_HVAC_TRELLIS_CLEARANCE.md  QUICK_FIELD_CHECK_HVAC_TRELLIS.md  QUOREX_SITE_INSTRUCTION_HVAC_TRELLIS.md  cleanup_artifacts.sh  cleanup_images_fast.py  cleanup_images_recursive.py  process_construction_docs.py
backend/documents/Aurora (Safeway) Regina, SK/.claude/: analysis_tasks.json
backend/documents/Aurora (Safeway) Regina, SK/Active Drawing/: F0.1 General Notes and Schedule - Aurora Food Store - DECOR PACKAGE R01.AI.md  F0.1 General Notes and Schedule - Aurora Food Store - DECOR PACKAGE R01.md  F0.2 Aurora Food Store - DECOR PACKAGE R01.AI.md  F0.2 Aurora Food Store - DECOR PACKAGE R01.md  F0.3 Aurora Food Store - DECOR PACKAGE R01.AI.md  F0.3 Aurora Food Store - DECOR PACKAGE R01.md  F1.1 Aurora Food Store - DECOR PACKAGE R01.AI.md  F1.1 Aurora Food Store - DECOR PACKAGE R01.md  (+18 more)
frontend/: app.js  (+12 more)
(+168 files in other folders)
